--- a/aseptic_exam_descriptive_table.html
+++ b/aseptic_exam_descriptive_table.html
@@ -912,7 +912,7 @@
                 <td>
                   <span class="question-number">Q17</span>
                   <strong
-                    >2. Breaks in aseptic technique or 1 break in asepsis ...</strong
+                    >2 Breaks in aseptic technique or 1 break in asepsis ...</strong
                   >
                 </td>
                 <td>1,657</td>
@@ -935,7 +935,7 @@
                 <td>
                   <span class="question-number">Q18</span>
                   <strong
-                    >2. or more major breaks in asepsis /1 break in asep...</strong
+                    >2 or more major breaks in asepsis /1 break in asep...</strong
                   >
                 </td>
                 <td>2,138</td>
